Max installations prediction

--- a/Tutorials/Regressors.ipynb
+++ b/Tutorials/Regressors.ipynb
@@ -6,8 +6,7 @@
    "id": "touched-hampshire",
    "metadata": {},
    "source": [
-    "### ML with PySpark\n",
-    "+ Classify/Predict "
+    "### ML with PySpark"
    ]
   },
   {
@@ -20,8 +19,15 @@
     "# Load our Pkgs\n",
     "\n",
     "import sys; sys.path.append(\"../\")\n",
-    "from DataPreprocessing.DataPreprocessing import read_data\n",
-    "from pyspark import SparkContext"
+    "from DataPreprocessing.DataPreprocessing import read_data,encode_categ_features,remove_useless_col\n",
+    "from pyspark import SparkContext\n",
+    "import pyspark.ml\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.feature import VectorAssembler,StringIndexer\n",
+    "# Load Pkgs \n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.types import IntegerType,BooleanType,DateType\n",
+    "from pyspark.sql.functions import col\n"
    ]
   },
   {
@@ -37,19 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "running-playback",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load Pkgs \n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import IntegerType,BooleanType,DateType\n",
-    "from pyspark.sql.functions import col"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "pressed-england",
    "metadata": {},
    "outputs": [],
@@ -60,13 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "handled-basketball",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load our dataset\n",
+    "interesting_categ_cols= ['Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
+    "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\"]\n",
+    "\n",
     "df= read_data(spark,file_name='train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51c276bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "useless_cols= ['App Name','App Id','Rating','Rating Count','Released','Last Updated','Content Rating','Installs','Minimum Installs']\n",
+    "\n",
+    "df= remove_useless_col(df,useless_cols)"
    ]
   },
   {
@@ -77,94 +86,19 @@
    "outputs": [],
    "source": [
     "# Rearrange\n",
-    "df = df.select('App Id', 'App Name', 'Category', 'Rating', 'Rating Count', 'Installs', 'Minimum Installs', 'Maximum Installs', 'Free', 'Price', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email', 'Released', 'Last Updated', 'Content Rating', 'Ad Supported', 'In App Purchases', 'Editors Choice')"
+    "df = df.select('Price','Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
+    "            'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
+    "            'Maximum Installs')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "israeli-straight",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#cast some columns to numeric values not strings\n",
-    "df = df.na.drop(how='any', subset=['Rating', 'Rating Count', 'Minimum Installs', 'Maximum Installs', 'Free', 'Price', 'Content Rating', 'Category'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "straight-certificate",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyspark.ml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "dedicated-compression",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load ML Pkgs\n",
-    "from pyspark.ml.feature import VectorAssembler,StringIndexer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "enormous-mambo",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[App Id: string, App Name: string, Category: string, Rating: float, Rating Count: int, Installs: string, Minimum Installs: int, Maximum Installs: int, Free: string, Price: float, Size: string, Minimum Android: string, Developer Id: string, Developer Email: string, Released: string, Last Updated: string, Content Rating: string, Ad Supported: string, In App Purchases: string, Editors Choice: string, Category_enc: double, Free_enc: double, Content Rating_enc: double, Ad Supported_enc: double, In App Purchases_enc: double, Editors Choice_enc: double]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Convert the string into numerical code\n",
-    "# label encoding\n",
-    "categoryEncoder = StringIndexer(inputCol='Category',outputCol='Category_enc', handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "categoryEncoder = StringIndexer(inputCol='Free',outputCol='Free_enc', handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "categoryEncoder = StringIndexer(inputCol='Content Rating',outputCol='Content Rating_enc',  handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "categoryEncoder = StringIndexer(inputCol='Ad Supported',outputCol='Ad Supported_enc', handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "categoryEncoder = StringIndexer(inputCol='In App Purchases',outputCol='In App Purchases_enc', handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "categoryEncoder = StringIndexer(inputCol='Editors Choice',outputCol='Editors Choice_enc', handleInvalid='skip').fit(df)\n",
-    "df = categoryEncoder.transform(df)\n",
-    "\n",
-    "df.na.fill(value=0.0)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "clear-huntington",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# encoded column back to String\n",
-    "from pyspark.ml.feature import IndexToString\n",
-    "converter = IndexToString(inputCol='Category_enc',outputCol='orig_category')\n",
-    "converted_df = converter.transform(df)"
+    "df= encode_categ_features(df,interesting_categ_cols)"
    ]
   },
   {
@@ -178,73 +112,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "critical-grenada",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df.select('Rating Count','Minimum Installs', 'Maximum Installs', 'Free_enc', 'Price', 'Content Rating_enc', 'Ad Supported_enc', 'In App Purchases_enc', 'Editors Choice_enc', 'Category_enc', 'Rating')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "mighty-portsmouth",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Rating Count', 'Minimum Installs', 'Maximum Installs', 'Free_enc', 'Price', 'Content Rating_enc', 'Ad Supported_enc', 'In App Purchases_enc', 'Editors Choice_enc', 'Category_enc']\n"
+      "['Price', 'Maximum Installs', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id']\n"
      ]
     }
    ],
    "source": [
+    "df2 = df\n",
     "required_features = df2.columns[:-1]      #all except the target variable 'Rating' which is at the last index\n",
     "print(required_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "outer-james",
    "metadata": {},
    "outputs": [],
    "source": [
     "# VectorAsm\n",
-    "vec_assembler = VectorAssembler(inputCols=required_features,outputCol='Features')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "tough-congo",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vec_assembler = VectorAssembler(inputCols=required_features,outputCol='Features')\n",
     "vec_df = vec_assembler.setHandleInvalid(\"skip\").transform(df2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7e5bbc81",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[Rating Count: int, Minimum Installs: int, Maximum Installs: int, Free_enc: double, Price: float, Content Rating_enc: double, Ad Supported_enc: double, In App Purchases_enc: double, Editors Choice_enc: double, Category_enc: double, Rating: float, Features: vector]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vec_df.na.drop(how='any',subset='Features')"
    ]
   },
   {
@@ -257,48 +152,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "polished-robin",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df,test_df = vec_df.select(['Features', 'Rating']).randomSplit([0.7,0.3])"
+    "train_df,test_df = vec_df.select(['Features', 'Maximum Installs']).randomSplit([0.7,0.3])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "stupid-cocktail",
    "metadata": {},
    "source": [
-    "#### Model Building\n",
-    "+ Pyspark.ml: DataFrame\n",
-    "+ Pyspark.mllib: RDD /Legacy"
+    "#### Model Building"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "retired-truth",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.ml.regression import LinearRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "active-stephen",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Regr Model\n",
-    "lr = LinearRegression(featuresCol='Features',labelCol='Rating')"
+    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "atlantic-lesbian",
    "metadata": {},
    "outputs": [
@@ -306,8 +190,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 1.874600\n",
-      "r2: 0.217931\n"
+      "RMSE: 0.000000\n",
+      "r2: 1.000000\n"
      ]
     }
    ],
@@ -322,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "confidential-wilderness",
    "metadata": {},
    "outputs": [
@@ -330,15 +214,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+------+------------------+\n",
-      "|  Features|Rating|        prediction|\n",
-      "+----------+------+------------------+\n",
-      "|(10,[],[])|   0.0|1.2354008672863137|\n",
-      "|(10,[],[])|   0.0|1.2354008672863137|\n",
-      "|(10,[],[])|   0.0|1.2354008672863137|\n",
-      "|(10,[],[])|   0.0|1.2354008672863137|\n",
-      "|(10,[],[])|   0.0|1.2354008672863137|\n",
-      "+----------+------+------------------+\n",
+      "+--------------------+----------------+------------------+\n",
+      "|            Features|Maximum Installs|        prediction|\n",
+      "+--------------------+----------------+------------------+\n",
+      "|(10,[0,1,2,6,9],[...|             822| 822.0000000000001|\n",
+      "|(10,[0,1,2,6,9],[...|             143|143.00000000000009|\n",
+      "|(10,[0,1,2,6,9],[...|             956| 956.0000000000001|\n",
+      "|(10,[0,1,2,6,9],[...|             167|167.00000000000009|\n",
+      "|(10,[0,1,2,6,9],[...|            1160|            1160.0|\n",
+      "+--------------------+----------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -362,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "continuing-george",
    "metadata": {
     "collapsed": true,
@@ -375,20 +259,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R Squared (R2) on test data = 0.189946\n"
+      "R Squared (R2) on test data = 1\n"
      ]
     }
    ],
    "source": [
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "lr_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
-    "                 labelCol=\"Rating\",metricName=\"r2\")\n",
+    "                 labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
     "print(\"R Squared (R2) on test data = %g\" % lr_evaluator.evaluate(y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "69c4cb15",
    "metadata": {},
    "outputs": [
@@ -396,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE) on test data = 1.90788\n"
+      "Root Mean Squared Error (RMSE) on test data = 1.00298e-14\n"
      ]
     }
    ],
@@ -416,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "52e76a01",
    "metadata": {},
    "outputs": [
@@ -438,14 +322,14 @@
     }
    ],
    "source": [
-    "from pyspark.ml.regression import DecisionTreeRegressor\n",
-    "dt = DecisionTreeRegressor(featuresCol ='Features', labelCol = 'Rating', maxBins=48)   #setting a larger maxbins(default=32) is an ad-hoc step just to solve an error I dont understand :)\n",
-    "dt_model = dt.fit(train_df)\n",
-    "dt_predictions = dt_model.transform(test_df)\n",
-    "dt_evaluator = RegressionEvaluator(\n",
-    "    labelCol=\"Rating\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "rmse = dt_evaluator.evaluate(dt_predictions)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
+    "# from pyspark.ml.regression import DecisionTreeRegressor\n",
+    "# dt = DecisionTreeRegressor(featuresCol ='Features', labelCol = 'Rating', maxBins=48)   #setting a larger maxbins(default=32) is an ad-hoc step just to solve an error I dont understand :)\n",
+    "# dt_model = dt.fit(train_df)\n",
+    "# dt_predictions = dt_model.transform(test_df)\n",
+    "# dt_evaluator = RegressionEvaluator(\n",
+    "#     labelCol=\"Rating\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "# rmse = dt_evaluator.evaluate(dt_predictions)\n",
+    "# print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
    ]
   },
   {
@@ -466,10 +350,10 @@
     }
    ],
    "source": [
-    "#Feature Importance\n",
-    "dt_model.featureImportances\n",
+    "# #Feature Importance\n",
+    "# dt_model.featureImportances\n",
     "\n",
-    "#notice that Feature at index 0 has higher importance, this feature is the 'Rating Count'"
+    "# #notice that Feature at index 0 has higher importance, this feature is the 'Rating Count'"
    ]
   },
   {
@@ -506,12 +390,12 @@
     }
    ],
    "source": [
-    "from pyspark.ml.regression import GBTRegressor\n",
-    "gbt = GBTRegressor(featuresCol = 'Features', labelCol = 'Rating', maxIter=10, maxBins=48) #same as above, maxbins is set just to avoid an error I dont understand\n",
-    "# maxIter is just a hyperparameter we put by hand\n",
-    "gbt_model = gbt.fit(train_df)\n",
-    "gbt_predictions = gbt_model.transform(test_df)\n",
-    "gbt_predictions.select('prediction', 'Rating', 'Features').show(5)"
+    "# from pyspark.ml.regression import GBTRegressor\n",
+    "# gbt = GBTRegressor(featuresCol = 'Features', labelCol = 'Rating', maxIter=10, maxBins=48) #same as above, maxbins is set just to avoid an error I dont understand\n",
+    "# # maxIter is just a hyperparameter we put by hand\n",
+    "# gbt_model = gbt.fit(train_df)\n",
+    "# gbt_predictions = gbt_model.transform(test_df)\n",
+    "# gbt_predictions.select('prediction', 'Rating', 'Features').show(5)"
    ]
   },
   {
@@ -529,10 +413,10 @@
     }
    ],
    "source": [
-    "gbt_evaluator = RegressionEvaluator(\n",
-    "    labelCol=\"Rating\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "rmse = gbt_evaluator.evaluate(gbt_predictions)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
+    "# gbt_evaluator = RegressionEvaluator(\n",
+    "#     labelCol=\"Rating\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "# rmse = gbt_evaluator.evaluate(gbt_predictions)\n",
+    "# print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
    ]
   },
   {
@@ -567,12 +451,12 @@
     }
    ],
    "source": [
-    "#this is giving me errors I still cannot resolve\n",
+    "# #this is giving me errors I still cannot resolve\n",
     "\n",
-    "from pyspark.ml.pipeline import PipelineModel\n",
-    "gbt_model.save(\"D:/CLASSSWORKKK/BD/BD_PROJECT/GBT_Model\")\n",
-    "#to overwrite an existing model\n",
-    "gbt_model.write().overwrite().save(\"D:/CLASSSWORKKK/BD/BD_PROJECT/GBT_Model\")"
+    "# from pyspark.ml.pipeline import PipelineModel\n",
+    "# gbt_model.save(\"D:/CLASSSWORKKK/BD/BD_PROJECT/GBT_Model\")\n",
+    "# #to overwrite an existing model\n",
+    "# gbt_model.write().overwrite().save(\"D:/CLASSSWORKKK/BD/BD_PROJECT/GBT_Model\")"
    ]
   },
   {
@@ -612,8 +496,8 @@
     }
    ],
    "source": [
-    "from pyspark.ml.pipeline import PipelineModel\n",
-    "LoadedModel = PipelineModel.load(\"./GBT_Model\")"
+    "# from pyspark.ml.pipeline import PipelineModel\n",
+    "# LoadedModel = PipelineModel.load(\"./GBT_Model\")"
    ]
   },
   {
