Generate a new processed csv but need to check some missing rows

--- a/DataPreprocessing/DataGeneration.ipynb
+++ b/DataPreprocessing/DataGeneration.ipynb
@@ -9,7 +9,7 @@
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark import SparkContext\n",
-    "from DataPreprocessing import process_data ,split_spark_df"
+    "from DataPreprocessing import process_data ,read_data"
    ]
   },
   {
@@ -75,16 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Splitting the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df,val_df,test_df=split_spark_df(all_df) "
+    "# Write processed data to csv for the next modules"
    ]
   },
   {
@@ -93,18 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Number of rows in train_df: {train_df.count()}')\n",
-    "print(f'Number of rows in val_df: {val_df.count()}')\n",
-    "print(f'Number of rows in test_df: {test_df.count()}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all_df.toPandas().to_csv('processed_dataset.csv', index=False) "
+    "all_df.repartition(1).write.format('com.databricks.spark.csv').save('Preprocessed_data.csv',header = 'true')"
    ]
   }
  ],
