--- a/Models/LinearRegression/InstallationsPrediction.ipynb
+++ b/Models/LinearRegression/InstallationsPrediction.ipynb
@@ -14,7 +14,7 @@
     "from pyspark.ml.feature import VectorAssembler,StringIndexer\n",
     "\n",
     "import sys; sys.path.append(\"../\")\n",
-    "from DataPreprocessing.DataPreprocessing import process_data,encode_categ_features,remove_useless_col\n"
+    "from DataPreprocessing.DataPreprocessing import read_data,encode_categ_features,remove_useless_col\n"
    ]
   },
   {
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "df=  process_data(spark, file_name='all',features='all')\n",
+    "df= read_data(spark, features='all')\n",
     "df.dtypes"
    ]
   },
