--- a/Models/LinearRegression/InstallationsPrediction.ipynb
+++ b/Models/LinearRegression/InstallationsPrediction.ipynb
@@ -12,8 +12,9 @@
     "import pyspark.ml\n",
     "from pyspark.ml.regression import LinearRegression\n",
     "from pyspark.ml.feature import VectorAssembler,StringIndexer\n",
+    "from pyspark.sql.functions import col\n",
     "\n",
-    "import sys; sys.path.append(\"../\")\n",
+    "import sys; sys.path.append(\"../../\")\n",
     "from DataPreprocessing.DataPreprocessing import read_data,encode_categ_features,remove_useless_col\n"
    ]
   },
@@ -52,28 +53,6 @@
    "id": "handled-basketball",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detecting outliers...\n",
-      "Number of outliers in Rating: 0 (0.00%)\n",
-      "Number of outliers in Rating Count: 388994 (16.82%)\n",
-      "Number of outliers in Minimum Installs: 260554 (11.27%)\n",
-      "Number of outliers in Maximum Installs: 407678 (17.63%)\n",
-      "Number of outliers in Price: 44943 (1.94%)\n",
-      "Number of rows before removing outliers: 2312944\n",
-      "Number of rows after removing those having more than 1 outlier in its columns: 1961130\n",
-      "Removing useless columns...\n",
-      "Handling missing values...\n",
-      "Total Number of rows : 1961130\n",
-      "Number of rows after dropping nulls: 1954764\n",
-      "Total Number of rows : 1954764\n",
-      "Total Number of rows : 1954764\n",
-      "Converting size to bytes...\n",
-      "Converted all sizes to Bytes.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -119,6 +98,10 @@
      "data": {
       "text/plain": [
        "[('Category', 'string'),\n",
+       " ('Rating', 'float'),\n",
+       " ('Rating Count', 'int'),\n",
+       " ('Installs', 'string'),\n",
+       " ('Minimum Installs', 'int'),\n",
        " ('Maximum Installs', 'int'),\n",
        " ('Free', 'string'),\n",
        " ('Price', 'float'),\n",
@@ -126,6 +109,9 @@
        " ('Minimum Android', 'string'),\n",
        " ('Developer Id', 'string'),\n",
        " ('Developer Email', 'string'),\n",
+       " ('Released', 'string'),\n",
+       " ('Last Updated', 'string'),\n",
+       " ('Content Rating', 'string'),\n",
        " ('Ad Supported', 'string'),\n",
        " ('In App Purchases', 'string'),\n",
        " ('Editors Choice', 'string')]"
@@ -142,8 +128,7 @@
     "so we can remove them safely\n",
     "'''\n",
     "\n",
-    "useless_cols= ['App Name','App Id','Rating','Rating Count',\\\n",
-    "               'Released','Last Updated','Content Rating','Installs','Minimum Installs']\n",
+    "useless_cols= ['App Name','App Id']\n",
     "df= remove_useless_col(df,useless_cols)\n",
     "df.dtypes"
    ]
@@ -165,27 +150,37 @@
    "outputs": [],
    "source": [
     "interesting_categ_cols= ['Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
-    "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\"]\n",
+    "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
+    "                    'Rating','Rating Count',\\\n",
+    "               'Released','Last Updated','Content Rating','Installs','Minimum Installs']\n",
     "\n",
     "df= encode_categ_features(df,interesting_categ_cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "eef5d2fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rearrange to make label the last column\n",
-    "df = df.select('Price','Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
-    "            'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
-    "            'Maximum Installs')"
+    "label = \"Maximum Installs\"\n",
+    "column_names = df.columns\n",
+    "\n",
+    "# Remove the column to move from the list of column names\n",
+    "column_names.remove(label)\n",
+    "\n",
+    "# Reorder the list of column names so that the column to move is at the end\n",
+    "new_column_order = column_names + [label]\n",
+    "\n",
+    "# Use the new column order to select the columns in the DataFrame,\n",
+    "# and then add the column to move to the end using withColumn()\n",
+    "df = df.select(*new_column_order).withColumn(label, col(label))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "critical-grenada",
    "metadata": {},
    "outputs": [
@@ -193,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Price', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email']\n"
+      "['Price', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email', 'Rating', 'Rating Count', 'Released', 'Last Updated', 'Content Rating', 'Installs', 'Minimum Installs']\n"
      ]
     }
    ],
@@ -204,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "outer-james",
    "metadata": {},
    "outputs": [],
@@ -224,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "polished-robin",
    "metadata": {},
    "outputs": [],
@@ -244,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "active-stephen",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs')"
+    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs', regParam=0.3, )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "atlantic-lesbian",
    "metadata": {},
    "outputs": [
@@ -262,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 5789.517479\n",
-      "r2: 0.033304\n"
+      "RMSE: 4747.646864\n",
+      "r2: 0.349121\n"
      ]
     }
    ],
@@ -278,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "confidential-wilderness",
    "metadata": {},
    "outputs": [
@@ -286,15 +281,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+----------------+------------------+\n",
-      "|            Features|Maximum Installs|        prediction|\n",
-      "+--------------------+----------------+------------------+\n",
-      "|(10,[0,1,5,8,9],[...|               8|   68.136875719925|\n",
-      "|(10,[0,1,5,8,9],[...|               2|103.00643060375387|\n",
-      "|(10,[0,1,5,8,9],[...|             475| 85.52440582609961|\n",
-      "|(10,[0,1,5,8,9],[...|             422| 85.47926251734839|\n",
-      "|(10,[0,5,6,8,9],[...|              14| 37.53743873067924|\n",
-      "+--------------------+----------------+------------------+\n",
+      "+--------------------+----------------+-------------------+\n",
+      "|            Features|Maximum Installs|         prediction|\n",
+      "+--------------------+----------------+-------------------+\n",
+      "|(17,[0,1,2,5,6,7,...|             238| -842.1016698885486|\n",
+      "|(17,[0,1,2,5,6,7,...|             218| -573.1449446455225|\n",
+      "|(17,[0,1,2,5,6,7,...|             130|-2381.4550009059467|\n",
+      "|(17,[0,1,2,5,6,7,...|             314| -2159.499181247639|\n",
+      "|(17,[0,1,2,5,6,7,...|             214| -943.7404244715199|\n",
+      "+--------------------+----------------+-------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -316,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "continuing-george",
    "metadata": {
     "collapsed": true,
@@ -329,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R Squared (R2) on test data = 0.0319308\n"
+      "R Squared (R2) on test data = 0.349139\n"
      ]
     }
    ],
@@ -342,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "69c4cb15",
    "metadata": {},
    "outputs": [
@@ -350,7 +345,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE) on test data = 5812\n"
+      "Root Mean Squared Error (RMSE) on test data = 4772.44\n"
      ]
     }
    ],
@@ -370,32 +365,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "52e76a01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error occurred while training or evaluating Decision Tree Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n",
+      "Error occurred while training or evaluating Random Forest Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n",
+      "Error occurred while training or evaluating Gradient Boosted Tree Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n"
+     ]
+    }
+   ],
    "source": [
-    "from pyspark.ml.regression import DecisionTreeRegressor\n",
-    "dt = DecisionTreeRegressor(featuresCol ='Features', labelCol = 'Maximum Installs', maxBins=48)   #setting a larger maxbins(default=32) is an ad-hoc step just to solve an error I dont understand :)\n",
-    "dt_model = dt.fit(train_df)\n",
-    "dt_predictions = dt_model.transform(test_df)\n",
-    "dt_evaluator = RegressionEvaluator(\n",
-    "    labelCol=\"Maximum Installs\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "rmse = dt_evaluator.evaluate(dt_predictions)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
+    "# from pyspark.ml.regression import DecisionTreeRegressor, RandomForestRegressor, GBTRegressor\n",
+    "# from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "# # Decision Tree Regressor\n",
+    "# try:\n",
+    "#     dt= DecisionTreeRegressor(featuresCol='Features',labelCol='Maximum Installs', maxDepth=3)\n",
+    "#     dt_model = dt.fit(train_df)\n",
+    "#     y_pred = dt_model.transform(test_df)\n",
+    "#     y_pred.show(5)\n",
+    "#     dt_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
+    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
+    "#     print(\"R Squared (R2) on test data = %g\" % dt_evaluator.evaluate(y_pred))\n",
+    "#     test_result = dt_model.evaluate(test_df)\n",
+    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
+    "# except Exception as e:\n",
+    "#     print(\"Error occurred while training or evaluating Decision Tree Regressor:\", e)\n",
+    "\n",
+    "# # Random Forest Regressor\n",
+    "# try:\n",
+    "#     rf = RandomForestRegressor(featuresCol='Features',labelCol='Maximum Installs', numTrees=100)\n",
+    "#     rf_model = rf.fit(train_df)\n",
+    "#     y_pred = rf_model.transform(test_df)\n",
+    "#     y_pred.show(5)\n",
+    "#     rf_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
+    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
+    "#     print(\"R Squared (R2) on test data = %g\" % rf_evaluator.evaluate(y_pred))\n",
+    "#     test_result = rf_model.evaluate(test_df)\n",
+    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
+    "# except Exception as e:\n",
+    "#     print(\"Error occurred while training or evaluating Random Forest Regressor:\", e)\n",
+    "\n",
+    "# # Gradient Boosted Tree Regressor\n",
+    "# try:\n",
+    "#     gbt = GBTRegressor(featuresCol='Features',labelCol='Maximum Installs', maxIter=10)\n",
+    "#     gbt_model = gbt.fit(train_df)\n",
+    "#     y_pred = gbt_model.transform(test_df)\n",
+    "#     y_pred.show(5)\n",
+    "#     gbt_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
+    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
+    "#     print(\"R Squared (R2) on test data = %g\" % gbt_evaluator.evaluate(y_pred))\n",
+    "#     test_result = gbt_model.evaluate(test_df)\n",
+    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
+    "# except Exception as e:\n",
+    "#     print(\"Error occurred while training or evaluating Gradient Boosted Tree Regressor:\", e)\n",
+    "# # from pyspark.ml.regression import AFTSurvivalRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b66a3e19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Feature Importance\n",
-    "dt_model.featureImportances\n",
+    "# #Feature Importance\n",
+    "# dt_model.featureImportances\n",
     "\n",
-    "#notice that Feature at index 0 has higher importance, this feature is the 'Rating Count'"
+    "# #notice that Feature at index 0 has higher importance, this feature is the 'Rating Count'"
    ]
   },
   {
@@ -414,12 +456,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.ml.regression import GBTRegressor\n",
-    "gbt = GBTRegressor(featuresCol = 'Features', labelCol = 'Maximum Installs', maxIter=10, maxBins=48) #same as above, maxbins is set just to avoid an error I dont understand\n",
-    "# maxIter is just a hyperparameter we put by hand\n",
-    "gbt_model = gbt.fit(train_df)\n",
-    "gbt_predictions = gbt_model.transform(test_df)\n",
-    "gbt_predictions.select('prediction', 'Maximum Installs', 'Features').show(5)"
+    "# from pyspark.ml.regression import GBTRegressor\n",
+    "# gbt = GBTRegressor(featuresCol = 'Features', labelCol = 'Maximum Installs', maxIter=10, maxBins=48) #same as above, maxbins is set just to avoid an error I dont understand\n",
+    "# # maxIter is just a hyperparameter we put by hand\n",
+    "# gbt_model = gbt.fit(train_df)\n",
+    "# gbt_predictions = gbt_model.transform(test_df)\n",
+    "# gbt_predictions.select('prediction', 'Maximum Installs', 'Features').show(5)"
    ]
   },
   {
@@ -429,10 +471,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gbt_evaluator = RegressionEvaluator(\n",
-    "    labelCol=\"Maximum Installs\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "rmse = gbt_evaluator.evaluate(gbt_predictions)\n",
-    "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
+    "# gbt_evaluator = RegressionEvaluator(\n",
+    "#     labelCol=\"Maximum Installs\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "# rmse = gbt_evaluator.evaluate(gbt_predictions)\n",
+    "# print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
    ]
   }
  ],
