Linear regression for installations prediction gives r2=0.34

--- a/Models/LinearRegression/InstallationsPrediction.ipynb
+++ b/Models/LinearRegression/InstallationsPrediction.ipynb
@@ -151,8 +151,7 @@
    "source": [
     "interesting_categ_cols= ['Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
     "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
-    "                    'Rating','Rating Count',\\\n",
-    "               'Released','Last Updated','Content Rating','Installs','Minimum Installs']\n",
+    "               'Released','Last Updated','Content Rating']\n",
     "\n",
     "df= encode_categ_features(df,interesting_categ_cols)"
    ]
@@ -224,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df,test_df = vec_df.select(['Features', 'Maximum Installs']).randomSplit([0.7,0.3])"
+    "train_df,test_df = vec_df.select(['Features', 'Maximum Installs']).randomSplit([0.8,0.2])"
    ]
   },
   {
@@ -239,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "active-stephen",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs', regParam=0.3, )"
+    "lr = LinearRegression(featuresCol='Features',labelCol='Maximum Installs', )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "atlantic-lesbian",
    "metadata": {},
    "outputs": [
@@ -257,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 4747.646864\n",
+      "RMSE: 4747.646684\n",
       "r2: 0.349121\n"
      ]
     }
@@ -352,129 +351,6 @@
    "source": [
     "test_result = lr_model.evaluate(test_df)\n",
     "print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "dde13580",
-   "metadata": {},
-   "source": [
-    "## Decision Tree Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "52e76a01",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error occurred while training or evaluating Decision Tree Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n",
-      "Error occurred while training or evaluating Random Forest Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n",
-      "Error occurred while training or evaluating Gradient Boosted Tree Regressor: requirement failed: DecisionTree requires maxBins (= 32) to be at least as large as the number of values in each categorical feature, but categorical feature 9 has 809942 values. Consider removing this and other categorical features with a large number of values, or add more training examples.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# from pyspark.ml.regression import DecisionTreeRegressor, RandomForestRegressor, GBTRegressor\n",
-    "# from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "\n",
-    "# # Decision Tree Regressor\n",
-    "# try:\n",
-    "#     dt= DecisionTreeRegressor(featuresCol='Features',labelCol='Maximum Installs', maxDepth=3)\n",
-    "#     dt_model = dt.fit(train_df)\n",
-    "#     y_pred = dt_model.transform(test_df)\n",
-    "#     y_pred.show(5)\n",
-    "#     dt_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
-    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
-    "#     print(\"R Squared (R2) on test data = %g\" % dt_evaluator.evaluate(y_pred))\n",
-    "#     test_result = dt_model.evaluate(test_df)\n",
-    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
-    "# except Exception as e:\n",
-    "#     print(\"Error occurred while training or evaluating Decision Tree Regressor:\", e)\n",
-    "\n",
-    "# # Random Forest Regressor\n",
-    "# try:\n",
-    "#     rf = RandomForestRegressor(featuresCol='Features',labelCol='Maximum Installs', numTrees=100)\n",
-    "#     rf_model = rf.fit(train_df)\n",
-    "#     y_pred = rf_model.transform(test_df)\n",
-    "#     y_pred.show(5)\n",
-    "#     rf_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
-    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
-    "#     print(\"R Squared (R2) on test data = %g\" % rf_evaluator.evaluate(y_pred))\n",
-    "#     test_result = rf_model.evaluate(test_df)\n",
-    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
-    "# except Exception as e:\n",
-    "#     print(\"Error occurred while training or evaluating Random Forest Regressor:\", e)\n",
-    "\n",
-    "# # Gradient Boosted Tree Regressor\n",
-    "# try:\n",
-    "#     gbt = GBTRegressor(featuresCol='Features',labelCol='Maximum Installs', maxIter=10)\n",
-    "#     gbt_model = gbt.fit(train_df)\n",
-    "#     y_pred = gbt_model.transform(test_df)\n",
-    "#     y_pred.show(5)\n",
-    "#     gbt_evaluator = RegressionEvaluator(predictionCol=\"prediction\", \\\n",
-    "#                     labelCol=\"Maximum Installs\",metricName=\"r2\")\n",
-    "#     print(\"R Squared (R2) on test data = %g\" % gbt_evaluator.evaluate(y_pred))\n",
-    "#     test_result = gbt_model.evaluate(test_df)\n",
-    "#     print(\"Root Mean Squared Error (RMSE) on test data = %g\" % test_result.rootMeanSquaredError)\n",
-    "# except Exception as e:\n",
-    "#     print(\"Error occurred while training or evaluating Gradient Boosted Tree Regressor:\", e)\n",
-    "# # from pyspark.ml.regression import AFTSurvivalRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b66a3e19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Feature Importance\n",
-    "# dt_model.featureImportances\n",
-    "\n",
-    "# #notice that Feature at index 0 has higher importance, this feature is the 'Rating Count'"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "496bc3dc",
-   "metadata": {},
-   "source": [
-    "## Gradient-Boosted Decision Tree Regressor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d78d0b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from pyspark.ml.regression import GBTRegressor\n",
-    "# gbt = GBTRegressor(featuresCol = 'Features', labelCol = 'Maximum Installs', maxIter=10, maxBins=48) #same as above, maxbins is set just to avoid an error I dont understand\n",
-    "# # maxIter is just a hyperparameter we put by hand\n",
-    "# gbt_model = gbt.fit(train_df)\n",
-    "# gbt_predictions = gbt_model.transform(test_df)\n",
-    "# gbt_predictions.select('prediction', 'Maximum Installs', 'Features').show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "087cca85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gbt_evaluator = RegressionEvaluator(\n",
-    "#     labelCol=\"Maximum Installs\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
-    "# rmse = gbt_evaluator.evaluate(gbt_predictions)\n",
-    "# print(\"Root Mean Squared Error (RMSE) on test data = %g\" % rmse)"
    ]
   }
  ],
