Remove uncorrelated feature for installations prediction

--- a/Models/LinearRegression/InstallationsPrediction.ipynb
+++ b/Models/LinearRegression/InstallationsPrediction.ipynb
@@ -104,7 +104,6 @@
        " ('Minimum Installs', 'int'),\n",
        " ('Maximum Installs', 'int'),\n",
        " ('Free', 'string'),\n",
-       " ('Price', 'float'),\n",
        " ('Size', 'string'),\n",
        " ('Minimum Android', 'string'),\n",
        " ('Developer Id', 'string'),\n",
@@ -124,11 +123,10 @@
    ],
    "source": [
     "'''\n",
-    "App Name, App Id, Rating, Rating Count, Released, Last Updated, Content Rating are not interesting here for max installations prediction,\n",
-    "so we can remove them safely\n",
+    "App Name and App Id are useless columns here, so we can remove them safely\n",
+    "The Price has a correlation of -0.004 with the max installations, so we must remove it\n",
     "'''\n",
-    "\n",
-    "useless_cols= ['App Name','App Id']\n",
+    "useless_cols= ['App Name','App Id','Price']\n",
     "df= remove_useless_col(df,useless_cols)\n",
     "df.dtypes"
    ]
@@ -151,14 +149,14 @@
    "source": [
     "interesting_categ_cols= ['Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
     "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
-    "               'Released','Last Updated','Content Rating']\n",
+    "               'Released','Last Updated','Content Rating','Installs']\n",
     "\n",
     "df= encode_categ_features(df,interesting_categ_cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "eef5d2fc",
    "metadata": {},
    "outputs": [],
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "critical-grenada",
    "metadata": {},
    "outputs": [
@@ -187,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Price', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email', 'Rating', 'Rating Count', 'Released', 'Last Updated', 'Content Rating', 'Installs', 'Minimum Installs']\n"
+      "['Rating', 'Rating Count', 'Minimum Installs', 'Category', 'Ad Supported', 'In App Purchases', 'Editors Choice', 'Free', 'Size', 'Minimum Android', 'Developer Id', 'Developer Email', 'Released', 'Last Updated', 'Content Rating', 'Installs']\n"
      ]
     }
    ],
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "outer-james",
    "metadata": {},
    "outputs": [],
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "polished-robin",
    "metadata": {},
    "outputs": [],
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "active-stephen",
    "metadata": {},
    "outputs": [],
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "atlantic-lesbian",
    "metadata": {},
    "outputs": [
@@ -256,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 4747.646684\n",
-      "r2: 0.349121\n"
+      "RMSE: 2689.996063\n",
+      "r2: 0.791566\n"
      ]
     }
    ],
@@ -272,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "confidential-wilderness",
    "metadata": {},
    "outputs": [
@@ -280,15 +278,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+----------------+-------------------+\n",
-      "|            Features|Maximum Installs|         prediction|\n",
-      "+--------------------+----------------+-------------------+\n",
-      "|(17,[0,1,2,5,6,7,...|             238| -842.1016698885486|\n",
-      "|(17,[0,1,2,5,6,7,...|             218| -573.1449446455225|\n",
-      "|(17,[0,1,2,5,6,7,...|             130|-2381.4550009059467|\n",
-      "|(17,[0,1,2,5,6,7,...|             314| -2159.499181247639|\n",
-      "|(17,[0,1,2,5,6,7,...|             214| -943.7404244715199|\n",
-      "+--------------------+----------------+-------------------+\n",
+      "+--------------------+----------------+------------------+\n",
+      "|            Features|Maximum Installs|        prediction|\n",
+      "+--------------------+----------------+------------------+\n",
+      "|(16,[0,1,2,3,4,8,...|             288| 520.1537656829215|\n",
+      "|(16,[0,1,2,3,4,8,...|             476| 571.6457492590023|\n",
+      "|(16,[0,1,2,3,4,8,...|             208| 533.3656928848467|\n",
+      "|(16,[0,1,2,3,4,8,...|             472|505.80906905628296|\n",
+      "|(16,[0,1,2,3,4,8,...|           11555| 18383.56046752056|\n",
+      "+--------------------+----------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -310,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "continuing-george",
    "metadata": {
     "collapsed": true,
@@ -323,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R Squared (R2) on test data = 0.349139\n"
+      "R Squared (R2) on test data = 0.792117\n"
      ]
     }
    ],
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "69c4cb15",
    "metadata": {},
    "outputs": [
@@ -344,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error (RMSE) on test data = 4772.44\n"
+      "Root Mean Squared Error (RMSE) on test data = 2690.87\n"
      ]
     }
    ],
