--- a/DataAnalysis/DiagnosticAnalysis/CorrelationAnalysis/CorrelationAnalysis.ipynb
+++ b/DataAnalysis/DiagnosticAnalysis/CorrelationAnalysis/CorrelationAnalysis.ipynb
@@ -16,7 +16,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "import sys; sys.path.append(\"../../\")\n",
+        "import sys; sys.path.append(\"../../../\")\n",
         "from DataPreprocessing.DataPreprocessing import read_data\n",
         "import CorrelationAnalysis"
       ]
@@ -40,7 +40,7 @@
       "outputs": [],
       "source": [
         "sc = SparkContext(master='local')\n",
-        "spark = SparkSession.builder.appName(\"DiagnosticAnalysis\")\\\n",
+        "spark = SparkSession.builder.appName(\"CorrelationAnalysis\")\\\n",
         "    .getOrCreate()"
       ]
     },
