--- a/Models/LinearRegression/InstallationsPrediction.ipynb
+++ b/Models/LinearRegression/InstallationsPrediction.ipynb
@@ -148,8 +148,8 @@
    "outputs": [],
    "source": [
     "interesting_categ_cols= ['Category', 'Ad Supported', 'In App Purchases', 'Editors Choice',\\\n",
-    "                  'Free', 'Size', \"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
-    "               'Released','Last Updated','Content Rating','Installs']\n",
+    "                  'Free',\"Minimum Android\",\"Developer Id\",\"Developer Email\",\\\n",
+    "               'Released','Last Updated','Content Rating']\n",
     "\n",
     "df= encode_categ_features(df,interesting_categ_cols)"
    ]
